--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,13 @@
   height: 40vh;
   width: 20vw;
 }
+.favorites-genres{
+  padding: 3rem;
+}
+.favorites-table{
+  padding: 3rem;
+  /* overflow: auto; */
+}
 
 @media screen and (max-width:400px){
   .banner-card{
